--- a/Group-game-project/wordle-project.css
+++ b/Group-game-project/wordle-project.css
@@ -25,7 +25,7 @@ hr {
 
 .tile {
     /* box */
-    border: 2px solid red;
+    border: 2px solid lightgrey;
     width: 60px;
     height: 60px;
     margin: 2.5px;
