--- a/Group-game-project/wordle-project.css
+++ b/Group-game-project/wordle-project.css
@@ -40,20 +40,20 @@ hr {
 
 .correct {
     background-color: greenyellow;
-    color: white;
-    border-color: white;
+    color: black;
+    border-color: black;
 }
 
 .present {
     background-color: yellow;
-    color: white;
-    border-color: white;
+    color: black;
+    border-color: black;
 }
 
 .absent {
     background-color: lightslategray;
-    color: white;
-    border-color: white;
+    color: black;
+    border-color: black;
 }
 
 
